# ts_forecasting

./: .pre-commit-config.yaml  .pylintrc  READme.md  config.yaml  main.py  pipeline_train_evaluate.py  pyproject.toml  test.py  train_model.py
scripts/: pipeline_inference.py
src/: features.py  forecast.py  helpers.py  models.py  script.py  test-repo.ipynb  utils.py
