[tool.poetry]
name = "ml-e"
version = "1"
description = "hobby repository"
authors = ["<lithvf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
pylint = "^3.3.5"
black = "^25.1.0"
pre-commit = "^4.1.0"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
ucimlrepo = "^0.0.7"
xgboost = "^3.0.0"
pyyaml = "^6.0.2"
mlflow = "^2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
